added some niceties for the html, padding for all stdins and a placeholder

--- a/src/html_src/index.html
+++ b/src/html_src/index.html
@@ -261,6 +261,7 @@
 		 .STDInInput {
 			background-color: var(--pageBG);
 			color:rgba(255, 255, 255, 1);
+			padding-left: 2vw;
 			position: relative;
 			left: 0px;
 			top: 0px;
