Split the project into a few extra files for organization, kept main.rs down to basically just the entry point and startup behavior

--- a/src/html_src/index.html
+++ b/src/html_src/index.html
@@ -4,6 +4,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+		<title>Sturdy's Web Server Controller</title>
 		<style>
 			:root {
 			--pageBG: #0e0e0e;
