add MessagePack as our primary communication protocol(saves bandwidth over JSON)

--- a/src/html_src/index.html
+++ b/src/html_src/index.html
@@ -23,6 +23,7 @@
         <style>
             styles!();
         </style>
+        <script src="msgpack.min.js"></script>
     </head>
     <body>
         <div class="menu" id="menu">
